<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/fondo_casillas_login"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/casillas_login"
            android:hint="@string/usuario"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <EditText
            android:id="@+id/etContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/casillas_login"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbCocina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cocina"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/cbCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/counter"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/iniciar_sesion"
        android:theme="@style/boton_rojo" />

</LinearLayout>